chore: coding jquery to display content

--- a/index.html
+++ b/index.html
@@ -18,15 +18,10 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
 <head>
   <!-- This tells the browser how to read the document. -->
   <meta charset="utf-8">
-
   <!-- Tells the browser what the title of this page should be. -->
-  <title>Resume</title>
-
+  <title>Resume Bil Benhamou</title>
   <!-- Load the page styles. -->
   <link href="css/style.css" rel="stylesheet">
-
-
-
   <!--
   Uncomment the <script> tag below when you're ready to add an interactive Google Map to your resume!
   -->
